# qt-client-server-log

./: .gitignore  CMakeLists.txt  Doxygen  Readme.md
client/: CMakeLists.txt  main.cpp
client/controller/: Main.cpp  Main.h  Net.cpp  Net.h
client/data/: LogCollection.cpp  LogCollection.h  LogRecord.cpp  LogRecord.h
client/input/: GetLogsAfter.cpp  GetLogsAfter.h  GetLogsBefore.cpp  GetLogsBefore.h  GetLogsBetween.cpp  GetLogsBetween.h  Input.cpp  Input.hpp  Log.cpp  Log.h
client/input/component/: GetLogsBetweenEbnf.h  LogJson.cpp
client/input/protocol/: GetLogRecordEbnf.cpp  GetLogRecordEbnf.hpp  GetLogRecordJson.cpp  GetLogRecordJson.h  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h  LogEbnf.cpp  LogEbnf.h  LogJson.cpp  LogJson.h
client/model/: LogCollection.cpp  LogCollection.h  LogRecord.cpp  LogRecord.h
client/output/: GetLogsBetween.cpp  GetLogsBetween.h  Output.cpp  Output.hpp
client/output/component/: GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h
client/output/protocol/: GetLogRecordJson.cpp  GetLogRecordJson.hpp  GetLogsBetweenEbnf.cpp  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h
client/view/: LogsTable.cpp  LogsTable.h  MainWindow.cpp  MainWindow.h
client/view/dialogs/: LogsAfter.cpp  LogsAfter.h  LogsBefore.cpp  LogsBefore.h  LogsBetween.cpp  LogsBetween.h
client/view/table/: Logs.cpp  Logs.h
client/view/windows/: Logs.cpp  Logs.h
client/web/: Socket.js  index.html  main.js
common/: def.h
common/algorithm/: Key.cpp  Key.h  String.cpp  String.h
common/data/: Data.cpp  Data.hpp
common/data/entity/: Interval.cpp  Interval.hpp  Log.cpp  Log.hpp
common/data/record/: Log.cpp  Log.hpp
common/db/: Collection.cpp  Collection.h  Connection.cpp  Connection.h  Db.cpp  Db.h  Record.cpp  Record.h  SQLiteConnection.cpp  SQLiteConnection.h  SQLiteStructure.cpp  SQLiteStructure.h  Structure.cpp  Structure.h  exception.cpp  exception.h
common/exception/: general.cpp  general.h
common/model/: Log.cpp  Log.h  LogTable.cpp  LogTable.h
common/output/: ErrorMessage.cpp  ErrorMessage.h
common/transport/: Pull.cpp  Pull.h  Push.cpp  Push.h
gtest/: CMakeLists.txt  main.cpp
gtest/client/: MainTest.cpp  MainTest.h
gtest/client/input/: GetLogRecordJson.cpp  GetLogsAfter.cpp  GetLogsAfter.h  GetLogsBefore.cpp  GetLogsBefore.h  GetLogsBetween.cpp  GetLogsBetween.h  GetLogsBetweenEbnf.cpp  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  Log.cpp  Log.h  LogEbnf.cpp  LogEbnf.h  LogJson.cpp  LogJson.h  LogTest.cpp  LogTest.h
gtest/client/input/protocol/: GetLogRecordEbnf.cpp  GetLogRecordEbnf.hpp  GetLogRecordJson.cpp  GetLogRecordJson.hpp  GetLogsBetweenEbnf.cpp  GetLogsBetweenJson.h
gtest/client/output/: GetLogRecordJson.cpp  GetLogsAfter.cpp  GetLogsAfter.h  GetLogsBefore.cpp  GetLogsBefore.h  GetLogsBetween.cpp  GetLogsBetweenEbnf.cpp  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h
gtest/client/output/protocol/: GetLogRecordEbnf.cpp  GetLogRecordEbnf.hpp  GetLogRecordJson.hpp  GetLogsBetweenEbnf.cpp  GetLogsBetweenJson.cpp
gtest/common/algorithm/: IntervalKey.cpp  IntervalKey.h  IntervalKeyTest.cpp  IntervalKeyTest.h
gtest/gtest-lib/googletest/googlemock/docs/: cook_book.md
gtest/gtest-lib/googletest/googletest/docs/: advanced.md
gtest/gtest-lib/googletest/googletest/include/gtest/internal/: gtest-port.h
gtest/gtest-lib/googletest/googletest/src/: gtest.cc
gtest/gtest-lib/googletest/googletest/test/: BUILD.bazel
gtest/server/input/: GetLogRecordJson.cpp  GetLogsAfter.cpp  GetLogsAfter.h  GetLogsAfterTest.cpp  GetLogsAfterTest.h  GetLogsBefore.cpp  GetLogsBefore.h  GetLogsBeforeTest.cpp  GetLogsBeforeTest.h  GetLogsBetween.cpp  GetLogsBetween.h  GetLogsBetweenEbnf.cpp  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h  GetLogsBetweenTest.cpp  GetLogsBetweenTest.h
gtest/server/input/protocol/: GetLogRecordEbnf.cpp  GetLogRecordEbnf.hpp  GetLogRecordJson.h  GetLogsBetweenEbnf.cpp  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h
gtest/server/output/: LogEbnf.cpp  LogEbnf.h  LogJson.cpp  LogJson.h
gtest/server/output/protocol/: GetLogRecordEbnf.cpp  GetLogRecordEbnf.hpp  GetLogRecordJson.cpp  GetLogRecordJson.hpp  GetLogsBetweenEbnf.cpp  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h  LogEbnf.cpp  LogEbnf.h  LogJson.cpp  LogJson.h
gtest/tools-and-fakes/: DataFromServerToClient.cpp  DataFromServerToClient.h  RequestFromClientToServer.cpp  RequestFromClientToServer.hpp  ResponseFromServerToClient.cpp  ResponseFromServerToClient.hpp
install/: mysql.sql
server/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  FakeEvent.cpp  FakeEvent.h  config.h  main.cpp
server/action/: InsertLog.cpp  InsertLog.h
server/app/: ConfigFile.cpp  ConfigFile.h  SignalBus.cpp  SignalBus.h
server/data/: LogCollection.cpp  LogCollection.h  LogRecord.cpp  LogRecord.h
server/input/: GetLogsAfter.cpp  GetLogsAfter.h  GetLogsBefore.cpp  GetLogsBefore.h  GetLogsBetween.cpp  GetLogsBetween.h  Input.cpp  Input.hpp
server/input/components/: GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h
server/input/protocol/: GetLogRecordJson.cpp  GetLogRecordJson.h  GetLogsBetweenEbnf.cpp  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h  GetRecordJson.cpp  GetRecordJson.hpp
server/model/: Log.cpp  Log.h  LogCollection.cpp  LogCollection.h  LogRecord.cpp  LogRecord.h  LogTable.cpp  LogTable.h  def.h
server/model/db/: Driver.cpp  Driver.h  Record.cpp  Record.h  Table.cpp  Table.h
server/output/: GetLogsBetween.cpp  GetLogsBetween.h  Log.cpp  Log.h  Output.cpp  Output.hpp
server/output/component/: LogEbnf.h  LogJson.cpp  LogJson.h
server/output/protocol/: GetLogRecordJson.cpp  GetLogRecordJson.h  GetLogsBetweenEbnf.cpp  GetLogsBetweenEbnf.h  GetLogsBetweenJson.cpp  GetLogsBetweenJson.h  LogEbnf.cpp  LogEbnf.h  LogJson.cpp  LogJson.h
server/service/: FakeEvent.cpp  FakeEvent.h  InsertLog.cpp  InsertLog.h  Main.cpp  Main.h  NetConnection.cpp  NetConnection.h
test/: main.cpp
test/client/: MainTest.cpp
(+7 files in other folders)
